Change ports as demo video, improving controller and fixing minor errors